// Vitest Snapshot v1

exports[`should analyze complex vue-ts project 1`] = `
[
  {
    "from": "/cmp.vue.ts",
    "relationType": "import",
    "to": "/utils/util.ts",
    "type": "relationship",
  },
  {
    "entityType": "file",
    "filePath": "/cmp.vue.ts",
    "id": "/cmp.vue.ts",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/utils/util.ts",
    "id": "/utils/util.ts",
    "type": "entity",
  },
  {
    "from": "/cmp.vue.ts",
    "relationType": "import",
    "to": "vue",
    "type": "relationship",
  },
  {
    "entityType": "import_declaration",
    "filePath": "<unknow>",
    "id": "vue",
    "type": "entity",
  },
  {
    "entityType": "function",
    "filePath": "/cmp.vue.ts",
    "id": "/cmp.vue.ts/render",
    "type": "entity",
    "typeString": "typeof import(\\"/cmp.vue\\").render",
  },
  {
    "entityType": "variable",
    "filePath": "<unknown>",
    "id": "/cmp.vue.ts/openBlock",
    "type": "entity",
  },
  {
    "entityType": "variable",
    "filePath": "<unknown>",
    "id": "/cmp.vue.ts/createElementBlock",
    "type": "entity",
  },
  {
    "entityType": "variable",
    "filePath": "<unknown>",
    "id": "/cmp.vue.ts/toDisplayString",
    "type": "entity",
  },
  {
    "from": "/cmp.vue.ts/render",
    "relationType": "use",
    "to": "/cmp.vue.ts/openBlock",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue.ts/render",
    "relationType": "use",
    "to": "/cmp.vue.ts/createElementBlock",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue.ts/render",
    "relationType": "use",
    "to": "/cmp.vue.ts/toDisplayString",
    "type": "relationship",
  },
  {
    "entityType": "function",
    "filePath": "/cmp.vue.ts",
    "id": "/cmp.vue.ts/setup",
    "type": "entity",
    "typeString": "(__props: any, { expose }: { expose: any; }) => { val: any; fn1: typeof import(\\"/utils/util\\").fn1; }",
  },
  {
    "entityType": "function",
    "filePath": "/utils/util.ts",
    "id": "/utils/util.ts/fn1",
    "type": "entity",
    "typeString": "typeof import(\\"/utils/util\\").fn1",
  },
  {
    "entityType": "variable",
    "filePath": "/node_modules/typescript/lib/lib.es5.d.ts",
    "id": "/node_modules/typescript/lib/lib.es5.d.ts/Object",
    "type": "entity",
  },
  {
    "entityType": "function",
    "filePath": "/node_modules/typescript/lib/lib.es5.d.ts",
    "id": "/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    "type": "entity",
    "typeString": "<T>(o: T, p: PropertyKey, attributes: PropertyDescriptor & ThisType<any>) => T",
  },
  {
    "from": "/cmp.vue.ts/setup",
    "relationType": "use",
    "to": "/utils/util.ts/fn1",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue.ts/setup",
    "relationType": "use",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/Object",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue.ts/setup",
    "relationType": "use",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue.ts",
    "relationType": "parent",
    "to": "/cmp.vue.ts/render",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue.ts",
    "relationType": "parent",
    "to": "/cmp.vue.ts/setup",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts",
    "relationType": "parent",
    "to": "/utils/util.ts/fn1",
    "type": "relationship",
  },
  {
    "entityType": "file",
    "filePath": "/node_modules/typescript/lib/lib.es5.d.ts",
    "id": "/node_modules/typescript/lib/lib.es5.d.ts",
    "type": "entity",
  },
  {
    "from": "/node_modules/typescript/lib/lib.es5.d.ts",
    "relationType": "parent",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/Object",
    "type": "relationship",
  },
  {
    "from": "/node_modules/typescript/lib/lib.es5.d.ts",
    "relationType": "parent",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    "type": "relationship",
  },
  {
    "from": "/index.ts",
    "relationType": "import",
    "to": "/cmp.vue.ts",
    "type": "relationship",
  },
  {
    "entityType": "file",
    "filePath": "/index.ts",
    "id": "/index.ts",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/package.json",
    "id": "/package.json",
    "type": "entity",
  },
  {
    "entityType": "function",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService",
    "type": "entity",
    "typeString": "typeof import(\\"/services/service\\").getService",
  },
  {
    "entityType": "function",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService/method1",
    "type": "entity",
    "typeString": "(a: number, b: number) => number",
  },
  {
    "entityType": "function",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService/prop1/method2",
    "type": "entity",
    "typeString": "(a: number) => number",
  },
  {
    "entityType": "file",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts",
    "type": "entity",
  },
  {
    "from": "/services/service.ts",
    "relationType": "parent",
    "to": "/services/service.ts/getService",
    "type": "relationship",
  },
  {
    "from": "/services/service.ts",
    "relationType": "parent",
    "to": "/services/service.ts/getService/method1",
    "type": "relationship",
  },
  {
    "from": "/services/service.ts/getService",
    "relationType": "parent",
    "to": "/services/service.ts/getService/method1",
    "type": "relationship",
  },
  {
    "entityType": "property",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService/prop1",
    "type": "entity",
  },
  {
    "from": "/services/service.ts",
    "relationType": "parent",
    "to": "/services/service.ts/getService/prop1/method2",
    "type": "relationship",
  },
  {
    "from": "/services/service.ts/getService",
    "relationType": "parent",
    "to": "/services/service.ts/getService/prop1/method2",
    "type": "relationship",
  },
  {
    "from": "/services/service.ts/getService/prop1",
    "relationType": "parent",
    "to": "/services/service.ts/getService/prop1/method2",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts",
    "relationType": "import",
    "to": "/services/service.ts",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1",
    "relationType": "use",
    "to": "/services/service.ts/getService",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1",
    "relationType": "use",
    "to": "/services/service.ts/getService/method1",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1",
    "relationType": "use",
    "to": "/services/service.ts/getService/prop1",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1",
    "relationType": "use",
    "to": "/services/service.ts/getService/prop1/method2",
    "type": "relationship",
  },
  {
    "from": "/services/service.ts",
    "relationType": "parent",
    "to": "/services/service.ts/getService/prop1",
    "type": "relationship",
  },
  {
    "from": "/services/service.ts/getService",
    "relationType": "parent",
    "to": "/services/service.ts/getService/prop1",
    "type": "relationship",
  },
]
`;

exports[`should analyze simple ts project 1`] = `
[
  {
    "from": "/index.ts",
    "relationType": "import",
    "to": "/util.ts",
    "type": "relationship",
  },
  {
    "entityType": "file",
    "filePath": "/index.ts",
    "id": "/index.ts",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/util.ts",
    "id": "/util.ts",
    "type": "entity",
  },
  {
    "entityType": "function",
    "filePath": "/util.ts",
    "id": "/util.ts/fn1",
    "type": "entity",
    "typeString": "(a: number) => number",
  },
  {
    "from": "/util.ts",
    "relationType": "parent",
    "to": "/util.ts/fn1",
    "type": "relationship",
  },
]
`;

exports[`should analyze vue-ts project 1`] = `
[
  {
    "from": "/cmp.vue.ts",
    "relationType": "import",
    "to": "/util.ts",
    "type": "relationship",
  },
  {
    "entityType": "file",
    "filePath": "/cmp.vue.ts",
    "id": "/cmp.vue.ts",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/util.ts",
    "id": "/util.ts",
    "type": "entity",
  },
  {
    "from": "/cmp.vue.ts",
    "relationType": "import",
    "to": "vue",
    "type": "relationship",
  },
  {
    "entityType": "import_declaration",
    "filePath": "<unknow>",
    "id": "vue",
    "type": "entity",
  },
  {
    "entityType": "function",
    "filePath": "/cmp.vue.ts",
    "id": "/cmp.vue.ts/render",
    "type": "entity",
    "typeString": "typeof import(\\"/cmp.vue\\").render",
  },
  {
    "entityType": "variable",
    "filePath": "<unknown>",
    "id": "/cmp.vue.ts/openBlock",
    "type": "entity",
  },
  {
    "entityType": "variable",
    "filePath": "<unknown>",
    "id": "/cmp.vue.ts/createElementBlock",
    "type": "entity",
  },
  {
    "entityType": "variable",
    "filePath": "<unknown>",
    "id": "/cmp.vue.ts/toDisplayString",
    "type": "entity",
  },
  {
    "from": "/cmp.vue.ts/render",
    "relationType": "use",
    "to": "/cmp.vue.ts/openBlock",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue.ts/render",
    "relationType": "use",
    "to": "/cmp.vue.ts/createElementBlock",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue.ts/render",
    "relationType": "use",
    "to": "/cmp.vue.ts/toDisplayString",
    "type": "relationship",
  },
  {
    "entityType": "function",
    "filePath": "/cmp.vue.ts",
    "id": "/cmp.vue.ts/setup",
    "type": "entity",
    "typeString": "(__props: any, { expose }: { expose: any; }) => { val: any; fn1: typeof import(\\"/util\\").fn1; }",
  },
  {
    "entityType": "function",
    "filePath": "/util.ts",
    "id": "/util.ts/fn1",
    "type": "entity",
    "typeString": "typeof import(\\"/util\\").fn1",
  },
  {
    "entityType": "variable",
    "filePath": "/node_modules/typescript/lib/lib.es5.d.ts",
    "id": "/node_modules/typescript/lib/lib.es5.d.ts/Object",
    "type": "entity",
  },
  {
    "entityType": "function",
    "filePath": "/node_modules/typescript/lib/lib.es5.d.ts",
    "id": "/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    "type": "entity",
    "typeString": "<T>(o: T, p: PropertyKey, attributes: PropertyDescriptor & ThisType<any>) => T",
  },
  {
    "from": "/cmp.vue.ts/setup",
    "relationType": "use",
    "to": "/util.ts/fn1",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue.ts/setup",
    "relationType": "use",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/Object",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue.ts/setup",
    "relationType": "use",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue.ts",
    "relationType": "parent",
    "to": "/cmp.vue.ts/render",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue.ts",
    "relationType": "parent",
    "to": "/cmp.vue.ts/setup",
    "type": "relationship",
  },
  {
    "from": "/util.ts",
    "relationType": "parent",
    "to": "/util.ts/fn1",
    "type": "relationship",
  },
  {
    "entityType": "file",
    "filePath": "/node_modules/typescript/lib/lib.es5.d.ts",
    "id": "/node_modules/typescript/lib/lib.es5.d.ts",
    "type": "entity",
  },
  {
    "from": "/node_modules/typescript/lib/lib.es5.d.ts",
    "relationType": "parent",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/Object",
    "type": "relationship",
  },
  {
    "from": "/node_modules/typescript/lib/lib.es5.d.ts",
    "relationType": "parent",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    "type": "relationship",
  },
  {
    "from": "/index.ts",
    "relationType": "import",
    "to": "/cmp.vue.ts",
    "type": "relationship",
  },
  {
    "entityType": "file",
    "filePath": "/index.ts",
    "id": "/index.ts",
    "type": "entity",
  },
]
`;
